--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,10 @@ http-body-util = "0.1.0"
 hyper = { version = "1.0.1", features = ["client"] }
 hyper-tls = "0.6.0"
 hyper-util = { version = "0.1.1", features = ["client", "tokio", "client-legacy"] }
-js-sandbox = "0.1.6"
+rquickjs = { version = "0.4.0", features = ["loader", "futures", "parallel"] }
 rss = "2.0.6"
 serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
 serde_yaml = "0.9.27"
 thiserror = "1.0.51"
 time = { version = "0.3.30", features = ["parsing", "formatting", "serde"] }
