--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ http-body-util = "0.1.0"
 hyper = { version = "1.0.1", features = ["client"] }
 hyper-tls = "0.6.0"
 hyper-util = { version = "0.1.1", features = ["client", "tokio", "client-legacy"] }
-rquickjs = { version = "0.4.0", features = ["loader", "futures", "parallel"] }
+rquickjs = { version = "0.4.0", features = ["loader", "futures", "parallel", "macro"] }
 rss = "2.0.6"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
