--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ hyper-tls = "0.6.0"
 hyper-util = { version = "0.1.1", features = ["client", "tokio", "client-legacy"] }
 rquickjs = { version = "0.4.0", features = ["loader", "parallel", "macro", "futures", "exports"] }
 rss = "2.0.6"
+scraper = "0.18.1"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 serde_yaml = "0.9.27"
