full_text filter for fetching full text content

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,13 @@ axum = "0.7.2"
 blake2s_simd = "1.0.2"
 clap = { version = "4.4.11", features = ["derive"] }
 erased-serde = "0.4.1"
+futures = "0.3.29"
 http = "1.0.0"
 http-body-util = "0.1.0"
 hyper = { version = "1.0.1", features = ["client"] }
 hyper-tls = "0.6.0"
 hyper-util = { version = "0.1.1", features = ["client", "tokio", "client-legacy"] }
+reqwest = "0.11.23"
 rquickjs = { version = "0.4.0", features = ["loader", "parallel", "macro", "futures", "exports"] }
 rss = "2.0.6"
 scraper = "0.18.1"
