--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ hyper = { version = "1.0.1", features = ["client"] }
 hyper-tls = "0.6.0"
 hyper-util = { version = "0.1.1", features = ["client", "tokio", "client-legacy"] }
 readability = { version = "0.3.0", default-features = false }
+regex = "1.10.2"
 reqwest = "0.11.23"
 rquickjs = { version = "0.4.0", features = ["loader", "parallel", "macro", "futures", "exports"] }
 rss = "2.0.6"
