--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ http-body-util = "0.1.0"
 hyper = { version = "1.0.1", features = ["client"] }
 hyper-tls = "0.6.0"
 hyper-util = { version = "0.1.1", features = ["client", "tokio", "client-legacy"] }
+itertools = "0.12.0"
 readability = { version = "0.3.0", default-features = false }
 regex = "1.10.2"
 reqwest = "0.11.23"
