--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ serde_json = "1.0.108" # for data transfer with the JS runtime
 
 # Web client (blocking and async both used, blocking used in the JS runtime)
 # TODO: upgrade reqwest after its hyper 1.0 upgrade
-reqwest = { version = "0.11.23", default-features = false, features = ["blocking", "rustls-tls"] }
+reqwest = { version = "0.11.23", default-features = false, features = ["blocking", "rustls-tls", "trust-dns"] }
 
 # Used in sanitize filter to remove/replace text contents
 regex = "1.10.2"
