--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,3 +44,7 @@ reqwest = { version = "0.11.23", default-features = false, features = ["blocking
 
 # Used in sanitize filter to remove/replace text contents
 regex = "1.10.2"
+
+# Logging
+tracing = { version = "0.1.40"}
+tracing-subscriber = "0.3.18"
