support modifying posts in js filter

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ tokio = { version = "1.35.0", features = ["macros", "net", "rt-multi-thread"] }
 clap = { version = "4.4.11", features = ["derive"] }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_yaml = "0.9.27"
+duration-str = { version = "0.7.1", default-features = false, features = ["serde"] }
 
 # Feed formats support
 atom_syndication = "0.12.2"
@@ -35,9 +36,10 @@ ego-tree = "0.6.2"
 readability = { version = "0.3.0", default-features = false }
 
 # JS runtime crates
-rquickjs = { version = "0.4.0", features = ["loader", "parallel", "macro", "futures", "exports"] }
+rquickjs = { version = "0.4.0", features = ["loader", "parallel", "macro", "futures", "exports", "either"] }
 blake2s_simd = "1.0.2" # for calculating digest in caching support of the remote loader
 serde_json = "1.0.108" # for data transfer with the JS runtime
+either = "1.9.0" # used for returning sum types from the JS runtime
 
 # Web client (blocking and async both used, blocking used in the JS runtime)
 # TODO: upgrade reqwest after its hyper 1.0 upgrade
@@ -49,4 +51,3 @@ regex = "1.10.2"
 # Logging
 tracing = { version = "0.1.40"}
 tracing-subscriber = "0.3.18"
-duration-str = { version = "0.7.1", default-features = false, features = ["serde"] }
