--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ async-trait = "0.1.74"
 thiserror = "1.0.51"
 futures = "0.3.29"
 itertools = "0.12.0"
+paste = "1.0.14"
 tokio = { version = "1.35.0", features = ["macros", "net", "rt-multi-thread"] }
 
 # Command line and config parsing
@@ -21,7 +22,7 @@ duration-str = { version = "0.7.1", default-features = false, features = ["serde
 
 # Feed formats support
 atom_syndication = "0.12.2"
-rss = "2.0.6"
+rss = { version = "2.0.6", features = ["serde"] }
 
 # Web server
 axum = "0.7.2"
