--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,3 +52,5 @@ regex = "1.10.2"
 # Logging
 tracing = { version = "0.1.40"}
 tracing-subscriber = "0.3.18"
+lazy_static = "1.4.0"
+html5ever = "0.26.0"
