--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,3 +57,6 @@ regex = "1.10.2"
 tracing = { version = "0.1.40"}
 tracing-subscriber = "0.3.18"
 lazy_static = "1.4.0"
+
+[patch.crates-io]
+ego-tree = { git = "https://github.com/shouya/ego-tree.git" }
