--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,7 @@ tracing = { version = "0.1.40"}
 tracing-subscriber = "0.3.18"
 lazy_static = "1.4.0"
 serde_regex = "1.1.0"
+axum-macros = "0.4.1"
 
 [patch.crates-io]
 ego-tree = { git = "https://github.com/shouya/ego-tree.git" }
