--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,23 +16,22 @@ tokio = { version = "1.35.0", features = ["macros", "net", "rt-multi-thread"] }
 
 # Command line and config parsing
 clap = { version = "4.4.11", features = ["derive"] }
-serde = { version = "1.0.193", features = ["derive"] }
+serde = { version = "1.0.193", features = ["derive", "rc"] }
 serde_yaml = "0.9.27"
 duration-str = { version = "0.7.1", default-features = false, features = ["serde"] }
 
 # Feed formats support
 atom_syndication = { version = "0.12.2", features = ["with-serde"] }
 rss = { version = "2.0.6", features = ["serde"] }
-
-# Web server
-axum = "0.7.2"
+axum = { version = "0.7.2", features = ["json"] }
 tower = "0.4.13"
 http = "1.0.0"
-url = "2.5.0"
+url = { version = "2.5.0", features = ["serde"] }
 mime = "0.3.17"
 
-# webui
+# webui (inspector) support
 maud = { version = "0.26.0", features = ["axum"] }
+rust-embed = { version = "8.2.0", features = ["include-exclude"] }
 
 # HTML manipulation in the feeds
 scraper = "0.18.1"
