--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,6 +11,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - uses: actions/setup-node@v4
+      - name: build inspector front-end
+        run: |
+          cd inspector
+          npm install
+          npm run build
+
       - name: Setup Rust toolchain
         uses: dtolnay/rust-toolchain@stable
 
