enable hot-reload

--- a/inspector/package.json
+++ b/inspector/package.json
@@ -11,7 +11,7 @@
     }
   },
   "scripts": {
-    "watch": "parcel watch --no-hmr",
+    "watch": "parcel watch",
     "build": "rm -rf ./dist/* && parcel build"
   },
   "dependencies": {
