--- a/inspector/package.json
+++ b/inspector/package.json
@@ -1,5 +1,8 @@
 {
   "devDependencies": {
+    "@babel/core": "^7.12.0",
+    "@parcel/reporter-bundle-analyzer": "^2.11.0",
+    "babel-plugin-prismjs": "^2.1.0",
     "parcel": "^2.11.0",
     "process": "^0.11.10"
   },
@@ -19,6 +22,7 @@
     "@codemirror/language": "^6.10.1",
     "@codemirror/state": "^6.4.0",
     "@codemirror/view": "^6.24.0",
-    "codemirror": "^6.0.1"
+    "codemirror": "^6.0.1",
+    "prismjs": "^1.29.0"
   }
 }
