--- a/inspector/package.json
+++ b/inspector/package.json
@@ -23,6 +23,7 @@
     "@codemirror/state": "^6.4.0",
     "@codemirror/view": "^6.24.0",
     "codemirror": "^6.0.1",
-    "prismjs": "^1.29.0"
+    "prismjs": "^1.29.0",
+    "split.js": "^1.6.5"
   }
 }
