strip the release binary to reduce file size

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,3 +66,7 @@ axum-macros = "0.4.1"
 
 [patch.crates-io]
 ego-tree = { git = "https://github.com/shouya/ego-tree.git" }
+
+[profile.release]
+lto = "fat"
+strip = true
