--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,18 +13,23 @@ futures = "0.3.29"
 itertools = "0.12.0"
 paste = "1.0.14"
 tokio = { version = "1.35.0", features = ["macros", "net", "rt-multi-thread"] }
+lazy_static = "1.4.0"
 
 # Command line and config parsing
 clap = { version = "4.4.11", features = ["derive"] }
 serde = { version = "1.0.193", features = ["derive", "rc"] }
 serde_yaml = "0.9.27"
 duration-str = { version = "0.7.1", default-features = false, features = ["serde"] }
+serde_regex = "1.1.0"
+
+# webserver
+axum-macros = "0.4.1"
+axum = { version = "0.7.2", features = ["json"] }
+tower = "0.4.13"
 
 # Feed formats support
 atom_syndication = { version = "0.12.2", features = ["with-serde"] }
 rss = { version = "2.0.6", features = ["serde"] }
-axum = { version = "0.7.2", features = ["json"] }
-tower = "0.4.13"
 http = "1.0.0"
 url = { version = "2.5.0", features = ["serde"] }
 mime = "0.3.17"
@@ -60,9 +65,7 @@ regex = "1.10.2"
 # Logging
 tracing = { version = "0.1.40"}
 tracing-subscriber = "0.3.18"
-lazy_static = "1.4.0"
-serde_regex = "1.1.0"
-axum-macros = "0.4.1"
+tower-http = { version = "0.5.1", features = ["compression-gzip"] }
 
 [patch.crates-io]
 ego-tree = { git = "https://github.com/shouya/ego-tree.git" }
