--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ thiserror = "1.0.51"
 futures = "0.3.29"
 itertools = "0.12.0"
 paste = "1.0.14"
-tokio = { version = "1.35.0", features = ["macros", "net", "rt-multi-thread"] }
+tokio = { version = "1.35.0", features = ["macros", "net", "rt-multi-thread", "sync"] }
 lazy_static = "1.4.0"
 
 # Command line and config parsing
@@ -66,6 +66,7 @@ regex = "1.10.2"
 tracing = { version = "0.1.40"}
 tracing-subscriber = "0.3.18"
 tower-http = { version = "0.5.1", features = ["compression-gzip"] }
+notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
 
 [patch.crates-io]
 ego-tree = { git = "https://github.com/shouya/ego-tree.git" }
