--- a/Cross.toml
+++ b/Cross.toml
@@ -1,2 +1,5 @@
 [target.aarch64-unknown-linux-musl]
 pre-build = ["apt-get update && apt-get install -y clang"]
+
+[target.aarch64-unknown-linux-gnu]
+pre-build = ["apt-get update && apt-get install -y clang patch"]
