--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,7 +75,8 @@ tracing = { version = "0.1.40"}
 tracing-subscriber = "0.3.18"
 tower-http = { version = "0.5.1", features = ["compression-gzip"] }
 notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
-schemars = { version = "0.8.16", features = ["url"] }
+# schemars = { version = "0.8.16", features = ["url", "preserve_order"] }
+schemars = { path = "../schemars/schemars/", features = ["url", "preserve_order"] }
 
 [patch.crates-io]
 ego-tree = { git = "https://github.com/shouya/ego-tree.git" }
