point schemars to my customized version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,8 @@ duration-str = { version = "0.7.1", default-features = false, features = ["serde
 axum-macros = "0.4.1"
 axum = { version = "0.7.4", features = ["json"] }
 tower = "0.4.13"
+tower-http = { version = "0.5.1", features = ["compression-gzip"] }
+notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
 
 # Feed formats support
 atom_syndication = { version = "0.12.2", features = ["with-serde"] }
@@ -45,6 +47,7 @@ mime = "0.3.17"
 
 # webui (inspector) support
 rust-embed = { version = "8.2.0", features = ["include-exclude"], optional = true }
+schemars = { git = "https://github.com/shouya/schemars", features = ["url", "preserve_order"] }
 
 # HTML manipulation in the feeds
 scraper = "0.18.1"
@@ -73,10 +76,6 @@ regex = "1.10.2"
 # Logging
 tracing = { version = "0.1.40"}
 tracing-subscriber = "0.3.18"
-tower-http = { version = "0.5.1", features = ["compression-gzip"] }
-notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
-# schemars = { version = "0.8.16", features = ["url", "preserve_order"] }
-schemars = { path = "../schemars/schemars/", features = ["url", "preserve_order"] }
 
 [patch.crates-io]
 ego-tree = { git = "https://github.com/shouya/ego-tree.git" }
