--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,12 +11,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - uses: actions/setup-node@v4
+      - uses: pnpm/action-setup@v3
+        with:
+          version: 8.14.x
       - name: build inspector front-end
         run: |
           cd inspector
-          npm install
-          npm run build
+          pnpm install
+          pnpm run build
 
       - name: Setup Rust toolchain
         uses: dtolnay/rust-toolchain@stable
