--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,12 +30,13 @@ clap = { version = "4.4.11", features = ["derive"] }
 serde = { version = "1.0.193", features = ["derive", "rc"] }
 serde_yaml = "0.9.27"
 duration-str = { version = "0.7.1", default-features = false, features = ["serde"] }
-serde_regex = "1.1.0"
 
 # webserver
 axum-macros = "0.4.1"
 axum = { version = "0.7.4", features = ["json"] }
 tower = "0.4.13"
+tower-http = { version = "0.5.1", features = ["compression-gzip"] }
+notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
 
 # Feed formats support
 atom_syndication = { version = "0.12.2", features = ["with-serde"] }
@@ -46,6 +47,7 @@ mime = "0.3.17"
 
 # webui (inspector) support
 rust-embed = { version = "8.2.0", features = ["include-exclude"], optional = true }
+schemars = { git = "https://github.com/shouya/schemars", features = ["url", "preserve_order"] }
 
 # HTML manipulation in the feeds
 scraper = "0.18.1"
@@ -74,8 +76,6 @@ regex = "1.10.2"
 # Logging
 tracing = { version = "0.1.40"}
 tracing-subscriber = "0.3.18"
-tower-http = { version = "0.5.1", features = ["compression-gzip"] }
-notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
 
 [patch.crates-io]
 ego-tree = { git = "https://github.com/shouya/ego-tree.git" }
