--- a/inspector/package.json
+++ b/inspector/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@codemirror/lang-xml": "^6.0.2",
+    "@codemirror/lang-json": "^6.0.1",
     "@codemirror/language": "^6.10.1",
     "@codemirror/state": "^6.4.0",
     "@codemirror/view": "^6.24.0",
