--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -36,5 +36,9 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - uses: pnpm/action-setup@v3
+        with:
+          version: 8.14.x
+
       - name: Build and Push Nightly Docker Image
         run: make build-and-push-nightly
