--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -15,11 +15,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Install Rust (stable)
-        uses: actions-rs/toolchain@v1
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: stable
-          override: true
+          targets: x86_64-unknown-linux-musl, aarch64-unknown-linux-musl
 
       - name: Install Cross
         run: cargo install cross --git https://github.com/cross-rs/cross
