--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -15,7 +15,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
+          # fetch tags and all history for tagging the commit with the
+          # most recent tag.
           fetch-tags: true
+          fetch-depth: 0
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
