--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,6 +76,8 @@ regex = "1.10.3"
 tracing = { version = "0.1.40"}
 tracing-subscriber = "0.3.18"
 axum-extra = { version = "0.9.2", features = ["cookie"] }
+base64 = "0.22.0"
+urlencoding = "2.1.3"
 
 [patch.crates-io]
 ego-tree = { git = "https://github.com/shouya/ego-tree.git" }
