--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ categories = ["command-line-interface", "web-programming"]
 [features]
 default = ["inspector-ui"]
 inspector-ui = ["dep:rust-embed"]
+bindgen = ["rquickjs/bindgen"]
 
 [dependencies]
 # Async runtime, utility and helper crates
@@ -60,7 +61,7 @@ html5ever = "0.26.0"
 htmlescape = "0.3.1"
 
 # JS runtime crates
-rquickjs = { version = "0.5.1", features = ["loader", "parallel", "macro", "futures", "exports", "either", "bindgen"] }
+rquickjs = { version = "0.5.1", features = ["loader", "parallel", "macro", "futures", "exports", "either"] }
 serde_json = "1.0.114" # for data transfer with the JS runtime
 either = "1.10.0" # used for returning sum types from the JS runtime
 
