--- a/Cross.toml
+++ b/Cross.toml
@@ -3,3 +3,8 @@ pre-build = ["apt-get update && apt-get install -y clang"]
 
 [target.aarch64-unknown-linux-gnu]
 pre-build = ["apt-get update && apt-get install -y clang patch"]
+
+[target.arm-unknown-linux-gnueabihf]
+pre-build = ["apt-get update && apt-get install -y clang patch libc6-dev"]
+# -latomic: https://github.com/bellard/quickjs/issues/75
+env.passthrough = ["RUSTFLAGS=-Clink-arg=-latomic"]
