--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,7 +70,7 @@ serde_json = "1.0.114" # for data transfer with the JS runtime
 either = "1.10.0" # used for returning sum types from the JS runtime
 
 # Web client (blocking and async both used, blocking used in the JS runtime)
-reqwest = { version = "0.12.2", default-features = false, features = ["blocking", "rustls-tls", "trust-dns", "socks"] }
+reqwest = { version = "0.12.2", default-features = false, features = ["blocking", "trust-dns", "socks", "http2", "rustls-tls"] }
 encoding_rs = "0.8.33"
 lru = "0.12.3"
 
