--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ duration-str = { version = "0.7.1", default-features = false, features = ["serde
 axum-macros = "0.4.1"
 axum = { version = "0.7.4", features = ["json"] }
 tower = "0.4.13"
-tower-http = { version = "0.5.2", features = ["compression-gzip"] }
+tower-http = { version = "0.5.2", features = ["compression-gzip", "cors"] }
 notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
 
 # Feed formats support
@@ -70,7 +70,7 @@ serde_json = "1.0.114" # for data transfer with the JS runtime
 either = "1.10.0" # used for returning sum types from the JS runtime
 
 # Web client (blocking and async both used, blocking used in the JS runtime)
-reqwest = { version = "0.12.2", default-features = false, features = ["blocking", "trust-dns", "socks", "http2", "rustls-tls"] }
+reqwest = { version = "0.12.2", default-features = false, features = ["blocking", "trust-dns", "socks", "http2", "rustls-tls", "stream"] }
 encoding_rs = "0.8.33"
 lru = "0.12.3"
 
