--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,9 @@ ego-tree = "0.6.2"
 readability = { version = "0.3.0", default-features = false }
 html5ever = "0.26.0"
 htmlescape = "0.3.1"
+lol_html = "1.2.1"
+urlencoding = "2.1.3"
+base64 = "0.22.0"
 
 # JS runtime crates
 rquickjs = { version = "0.5.1", features = ["loader", "parallel", "macro", "futures", "exports", "either"] }
@@ -76,13 +79,13 @@ lru = "0.12.3"
 
 # Used in sanitize filter to remove/replace text contents
 regex = "1.10.3"
+# Used in domain matching
+glob-match = "0.2.1"
 
 # Logging
 tracing = { version = "0.1.40"}
 tracing-subscriber = "0.3.18"
 axum-extra = { version = "0.9.2", features = ["cookie"] }
-base64 = "0.22.0"
-urlencoding = "2.1.3"
 
 [patch.crates-io]
 ego-tree = { git = "https://github.com/shouya/ego-tree.git" }
