--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ itertools = "0.12.1"
 paste = "1.0.14"
 tokio = { version = "1.36.0", features = ["macros", "net", "rt-multi-thread", "sync"] }
 lazy_static = "1.4.0"
+blake3 = "1.5.1"
 
 # Command line and config parsing
 clap = { version = "4.5.1", features = ["derive", "env"] }
@@ -39,6 +40,7 @@ duration-str = { version = "0.7.1", default-features = false, features = ["serde
 # webserver
 axum-macros = "0.4.1"
 axum = { version = "0.7.4", features = ["json"] }
+axum-extra = { version = "0.9.2", features = ["cookie"] }
 tower = "0.4.13"
 tower-http = { version = "0.5.2", features = ["compression-gzip", "cors"] }
 notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
@@ -85,7 +87,6 @@ glob-match = "0.2.1"
 # Logging
 tracing = { version = "0.1.40"}
 tracing-subscriber = "0.3.18"
-axum-extra = { version = "0.9.2", features = ["cookie"] }
 
 [patch.crates-io]
 ego-tree = { git = "https://github.com/shouya/ego-tree.git" }
