--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ itertools = "0.12.1"
 paste = "1.0.14"
 tokio = { version = "1.36.0", features = ["macros", "net", "rt-multi-thread", "sync"] }
 lazy_static = "1.4.0"
+blake3 = "1.5.1"
 
 # Command line and config parsing
 clap = { version = "4.5.1", features = ["derive", "env"] }
@@ -39,8 +40,9 @@ duration-str = { version = "0.7.1", default-features = false, features = ["serde
 # webserver
 axum-macros = "0.4.1"
 axum = { version = "0.7.4", features = ["json"] }
+axum-extra = { version = "0.9.2", features = ["cookie"] }
 tower = "0.4.13"
-tower-http = { version = "0.5.2", features = ["compression-gzip"] }
+tower-http = { version = "0.5.2", features = ["compression-gzip", "cors"] }
 notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
 
 # Feed formats support
@@ -63,6 +65,9 @@ ego-tree = "0.6.2"
 readability = { version = "0.3.0", default-features = false }
 html5ever = "0.26.0"
 htmlescape = "0.3.1"
+lol_html = "1.2.1"
+urlencoding = "2.1.3"
+base64 = "0.22.0"
 
 # JS runtime crates
 rquickjs = { version = "0.5.1", features = ["loader", "parallel", "macro", "futures", "exports", "either"] }
@@ -70,19 +75,18 @@ serde_json = "1.0.114" # for data transfer with the JS runtime
 either = "1.10.0" # used for returning sum types from the JS runtime
 
 # Web client (blocking and async both used, blocking used in the JS runtime)
-reqwest = { version = "0.12.2", default-features = false, features = ["blocking", "trust-dns", "socks", "http2", "rustls-tls"] }
+reqwest = { version = "0.12.2", default-features = false, features = ["blocking", "trust-dns", "socks", "http2", "rustls-tls", "stream"] }
 encoding_rs = "0.8.33"
 lru = "0.12.3"
 
 # Used in sanitize filter to remove/replace text contents
 regex = "1.10.3"
+# Used in domain matching
+glob-match = "0.2.1"
 
 # Logging
 tracing = { version = "0.1.40"}
 tracing-subscriber = "0.3.18"
-axum-extra = { version = "0.9.2", features = ["cookie"] }
-base64 = "0.22.0"
-urlencoding = "2.1.3"
 
 [patch.crates-io]
 ego-tree = { git = "https://github.com/shouya/ego-tree.git" }
