--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ thiserror = "1.0.57"
 futures = "0.3.30"
 itertools = "0.12.1"
 paste = "1.0.14"
-tokio = { version = "1.36.0", features = ["macros", "net", "rt-multi-thread", "sync"] }
+tokio = { version = "1.36.0", features = ["macros", "net", "rt-multi-thread", "sync", "signal"] }
 lazy_static = "1.4.0"
 blake3 = "1.5.1"
 
