--- a/Cargo.toml
+++ b/Cargo.toml
@@ -87,6 +87,7 @@ glob-match = "0.2.1"
 # Logging
 tracing = { version = "0.1.40"}
 tracing-subscriber = "0.3.18"
+maud = { version = "0.26.0", features = ["axum"] }
 
 [patch.crates-io]
 ego-tree = { git = "https://github.com/shouya/ego-tree.git" }
