--- a/Cargo.toml
+++ b/Cargo.toml
@@ -88,6 +88,7 @@ glob-match = "0.2.1"
 tracing = { version = "0.1.40"}
 tracing-subscriber = "0.3.18"
 maud = { version = "0.26.0", features = ["axum"] }
+ammonia = "4.0.0"
 
 [patch.crates-io]
 ego-tree = { git = "https://github.com/shouya/ego-tree.git" }
