--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,7 +30,7 @@ jobs:
         run: cargo build
 
       - name: cargo test
-        run: cargo test
+        run: cargo test --features _test-offline
 
       - name: cargo fmt
         run: cargo fmt --all -- --check
