--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,6 +76,7 @@ base64 = "0.22.0"
 rquickjs = { version = "0.5.1", features = ["loader", "parallel", "macro", "futures", "exports", "either"] }
 serde_json = "1.0.114" # for data transfer with the JS runtime
 either = "1.10.0" # used for returning sum types from the JS runtime
+jsonpath_lib = "0.3.0"
 
 # Web client (blocking and async both used, blocking used in the JS runtime)
 reqwest = { version = "0.12.2", default-features = false, features = ["blocking", "trust-dns", "socks", "http2", "rustls-tls", "stream"] }
