--- a/Cargo.toml
+++ b/Cargo.toml
@@ -94,6 +94,7 @@ tracing-subscriber = "0.3.18"
 maud = { version = "0.26.0", features = ["axum"] }
 ammonia = "4.0.0"
 serde_with = "3.9.0"
+perfect-derive = "0.1.5"
 
 [patch.crates-io]
 ego-tree = { git = "https://github.com/shouya/ego-tree.git" }
