--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,7 +73,7 @@ urlencoding = "2.1.3"
 base64 = "0.22.0"
 
 # JS runtime crates
-rquickjs = { version = "0.5.1", features = ["loader", "parallel", "macro", "futures", "exports", "either"] }
+rquickjs = { version = "0.10.0", features = ["loader", "parallel", "macro", "futures", "either"] }
 serde_json = "1.0.114" # for data transfer with the JS runtime
 either = "1.10.0" # used for returning sum types from the JS runtime
 jsonpath_lib = "0.3.0"
